--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Packaging & Organization service for duo voice platform",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,7 @@
     "cors": "^2.8.5",
     "dvp-common": "^1.1.0",
     "dvp-healthcheck": "^1.0.3",
-    "dvp-mongomodels": "5.3.10",
+    "dvp-mongomodels": "^6.0.4",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
